# cidr-cost-model

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
data/: table.csv  test.csv  test.json  test.tbl
execution_engine/: dump_json.hpp  dump_types.hpp  execution_engine.hpp  predicate.hpp  query.hpp  test.cpp
ml/: README.md  black_box.py  black_box_data_efficiency.py  data_efficiency.ipynb  operator_node.py  parser.py  util.py  white_box_data_efficiency.py  white_box_evaluate.ipynb  white_box_single_pipeline.py
ml/data/: build_pipeline.csv  probe_pipeline.csv  query_plan_stats.bbmodel.100.epoch.0.pickle  query_plan_stats.csv  query_plan_stats.json  query_plan_stats.traintest.json  simple_sel_pipeline.csv  simple_sel_pipeline.json  simple_sel_pipeline.traintest.json  simple_sel_pipeline_new_tablesizes.csv
ml/models/black_box/: params_join.pickle  params_scan.pickle  query_plan_stats.bbmodel.10.epoch.3950.pickle  query_plan_stats.bbmodel.10.epoch.7900.pickle  query_plan_stats.bbmodel.10.epoch.7950.pickle  query_plan_stats.bbmodel.100.epoch.1550.pickle  query_plan_stats.bbmodel.100.epoch.2900.pickle  query_plan_stats.bbmodel.2.epoch.3950.pickle  query_plan_stats.bbmodel.20.epoch.3950.pickle  query_plan_stats.bbmodel.20.epoch.7900.pickle  query_plan_stats.bbmodel.20.epoch.7950.pickle  query_plan_stats.bbmodel.4.epoch.3950.pickle  query_plan_stats.bbmodel.40.epoch.3900.pickle  query_plan_stats.bbmodel.40.epoch.3950.pickle  query_plan_stats.bbmodel.6.epoch.3950.pickle  query_plan_stats.bbmodel.8.epoch.3950.pickle  query_plan_stats.bbmodel.80.epoch.1950.pickle  (+9 more)
operators/: build_ops_test.sh  ops_test.cpp  selection_ops.hpp
pmbs_bench/: pmbw  stats2gnuplot
training_data_generator/: pipeline_cost_exp1.cpp  pipelines.h
training_data_generator/old/: physical_cost_exp1.cpp  physical_cost_exp1.sh  row_col_exp1.cpp
utils/: cidr_exception.hpp  filestream_guard.hpp  vector_helper.hpp
(+40 files in other folders)
